--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.example.hsarkisla.itenvantermobilapp"
         minSdkVersion 15
@@ -18,14 +18,61 @@ android {
         }
     }
 }
+dependencies {
+    compile('com.github.KingsMentor:MobileVisionBarcodeScanner:v1.2') { transitive = true; }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    repositories {
+        mavenCentral()
+
+        maven {
+            maven { url "https://jitpack.io" }
+            url "http://dl.bintray.com/journeyapps/maven"
+        }
+    }
+
+    dependencies {
+        // Supports Android 4.0.3 and later (API level 15)
+        compile 'com.journeyapps:zxing-android-embedded:2.0.1@aar'
+        compile 'io.sentry:sentry-android:1.3.0'
+
+        // Supports Android 2.1 and later (API level 7), but not optimal for later Android versions.
+        // If you only plan on supporting Android 4.0.3 and up, you don't need to include this.
+        compile 'com.journeyapps:zxing-android-legacy:2.0.1@aar'
+
+        // Convenience library to launch the scanning and encoding Activities.
+        // It automatically picks the best scanning library from the above two, depending on the
+        // Android version and what is available.
+        compile 'com.journeyapps:zxing-android-integration:2.0.1@aar'
+
+        // Version 3.0.x of zxing core contains some code that is not compatible on Android 2.2 and earlier.
+        // This mostly affects encoding, but you should test if you plan to support these versions.
+        // Older versions e.g. 2.2 may also work if you need support for older Android versions.
+        compile 'com.google.zxing:core:3.0.1'
+
+    }
+
+    dependencies {
+        compile 'com.jakewharton:butterknife:8.7.0'
+
+        annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
+    }
+
+    compile 'me.dm7.barcodescanner:zxing:1.9.4'
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     testCompile 'junit:junit:4.12'
 }
