--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,15 @@ dependencies {
 
         annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
     }
+// Retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
 
-
+// JSON Parsing
+    compile 'com.google.code.gson:gson:2.6.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'me.dm7.barcodescanner:zxing:1.9.4'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
